button colour changed

--- a/book.html
+++ b/book.html
@@ -36,7 +36,7 @@
         </tr>
         <tr>
             <td></td>
-            <td><button class="btn btn-danger">submit</button></td>
+            <td><button class="btn btn-success">submit</button></td>
         </tr>
     </table>
     
