--- a/book.html
+++ b/book.html
@@ -15,6 +15,10 @@
             <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
+            <td>genre</td>
+            <td><input type="text" class="form-control"></td>
+        </tr>
+        <tr>
             <td>author</td>
             <td><input type="text" class="form-control"></td>
         </tr>
